force-app/main/default/objects/Contrato__c/Contrato__c.object-meta.xml
<CustomObject>
    <label>Contrato</label>
    <nameField>
        <label>Número do contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>