force-app/main/default/objects/Contrato__c/fields/BoletimSubscricao__c.field-meta.xml
<CustomField>
    <fullName>BoletimSubscricao__c</fullName>
    <label>Boletim de subscrição</label>
    <length>20</length>
    <type>Text</type>
</CustomField>