force-app/main/default/objects/Contrato__c/fields/Carencia__c.field-meta.xml
<CustomField>
    <fullName>Carencia__c</fullName>
    <label>Carência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>