force-app/main/default/objects/Contrato__c/fields/CET__c.field-meta.xml
<CustomField>
    <fullName>CET__c</fullName>
    <label>CET</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>