force-app/main/default/objects/Contrato__c/fields/DataFimContrato__c.field-meta.xml
<CustomField>
    <fullName>DataFimContrato__c</fullName>
    <label>Data fim do contrato</label>
    <type>Date</type>
</CustomField>