force-app/main/default/objects/Contrato__c/fields/DataInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataInicioContrato__c</fullName>
    <label>Data início do contrato</label>
    <type>Date</type>
</CustomField>