force-app/main/default/objects/Contrato__c/fields/Forma__c.field-meta.xml
<CustomField>
    <fullName>Forma__c</fullName>
    <label>Forma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>