force-app/main/default/objects/Contrato__c/fields/IOF__c.field-meta.xml
<CustomField>
    <fullName>IOF__c</fullName>
    <label>IOF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>