force-app/main/default/objects/Contrato__c/fields/N_mero_do_contrato_fora__c.field-meta.xml
<CustomField>
    <fullName>N_mero_do_contrato_fora__c</fullName>
    <label>Número do contrato fora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>