force-app/main/default/objects/Contrato__c/fields/NumeroProposta__c.field-meta.xml
<CustomField>
    <fullName>NumeroProposta__c</fullName>
    <label>Numero proposta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>