force-app/main/default/objects/Contrato__c/fields/OpcaoRemuneracaoLiquidaMensal__c.field-meta.xml
<CustomField>
    <fullName>OpcaoRemuneracaoLiquidaMensal__c</fullName>
    <label>Opção de remuneração liquida mensal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opto pela remuneração líquida mensal</fullName>
            </value>
            <value>
                <fullName>Opto pela remuneração líquida mensal com uma fração do valor integralizado.</fullName>
            </value>
            <value>
                <fullName>Não opto pela remuneração líquida mensal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>