force-app/main/default/objects/Contrato__c/fields/OrgaoEmissor__c.field-meta.xml
<CustomField>
    <fullName>OrgaoEmissor__c</fullName>
    <label>Órgão emissor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABNC - Academia Brasileira de Neurocirurgia</fullName>
            </value>
            <value>
                <fullName>AGU - Advocacia-Geral da União</fullName>
            </value>
            <value>
                <fullName>ANAC - Agência Nacional de Aviação Civil</fullName>
            </value>
            <value>
                <fullName>CAER - Clube de Aeronáutica</fullName>
            </value>
            <value>
                <fullName>CAU - Conselho de Arquitetura e Urbanismo</fullName>
            </value>
            <value>
                <fullName>CBM - Corpo de Bombeiro Militar</fullName>
            </value>
            <value>
                <fullName>CFA - Conselho Federal Administração</fullName>
            </value>
            <value>
                <fullName>CFB - Conselho Federal de Biblioteconomia</fullName>
            </value>
            <value>
                <fullName>CFBIO - Conselho Federal de Biologia</fullName>
            </value>
            <value>
                <fullName>CFBM - Conselho Federal de Biomedicina</fullName>
            </value>
            <value>
                <fullName>CFC - Conselho Federal de Contabilidade</fullName>
            </value>
            <value>
                <fullName>CFESS - Conselho Federal de Serviço Social</fullName>
            </value>
            <value>
                <fullName>CFF - Conselho Regional de Farmácia</fullName>
            </value>
            <value>
                <fullName>CFFA - Conselho Federal de Fonoaudiologia</fullName>
            </value>
            <value>
                <fullName>CFM - Conselho Federal de Medicina</fullName>
            </value>
            <value>
                <fullName>CFMV - Conselho Federal de Medicina Veterinária</fullName>
            </value>
            <value>
                <fullName>CFN - Conselho Federal de Nutrição</fullName>
            </value>
            <value>
                <fullName>CFO - Conselho Federal de Odontologia</fullName>
            </value>
            <value>
                <fullName>CFP - Conselho Federal de Psicologia</fullName>
            </value>
            <value>
                <fullName>CFQ - Conselho Regional de Química</fullName>
            </value>
            <value>
                <fullName>CFT - Conselho Federal dos Técnicos Industriais</fullName>
            </value>
            <value>
                <fullName>CFTA - Conselho Federal dos Técnicos Agrícolas</fullName>
            </value>
            <value>
                <fullName>CGPI - Coordenação Geral de Privilégios e Imunidades</fullName>
            </value>
            <value>
                <fullName>CGPMAF - Coordenadoria Geral de Polícia Marítima, Aeronáutica e de Fronteiras</fullName>
            </value>
            <value>
                <fullName>CIPC - Centro de Inteligência da Polícia Civil</fullName>
            </value>
            <value>
                <fullName>CNIG - Conselho Nacional de Imigração</fullName>
            </value>
            <value>
                <fullName>CNT - Confederação Nacional do Transporte</fullName>
            </value>
            <value>
                <fullName>CNTV - Confederação Nacional de Vigilantes &amp; Prestadores de Serviços</fullName>
            </value>
            <value>
                <fullName>COFECI - Conselho Federal de Corretores de Imóveis</fullName>
            </value>
            <value>
                <fullName>COFECON - Conselho Federal de Economia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>