force-app/main/default/objects/Contrato__c/fields/PercentualGarantia__c.field-meta.xml
<CustomField>
    <fullName>PercentualGarantia__c</fullName>
    <label>% da garantia</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>