force-app/main/default/objects/Contrato__c/fields/PercentualPendente__c.field-meta.xml
<CustomField>
    <fullName>PercentualPendente__c</fullName>
    <label>% pendente</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>