force-app/main/default/objects/Contrato__c/fields/PercentualUtilizado__c.field-meta.xml
<CustomField>
    <fullName>PercentualUtilizado__c</fullName>
    <label>% utilizado</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>