force-app/main/default/objects/Contrato__c/fields/PrazoContrato__c.field-meta.xml
<CustomField>
    <fullName>PrazoContrato__c</fullName>
    <label>Prazo do contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>