force-app/main/default/objects/Contrato__c/fields/PrazoContratoDias__c.field-meta.xml
<CustomField>
    <fullName>PrazoContratoDias__c</fullName>
    <formula>DataFimContrato__c - DataInicioContrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo contrato (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>