force-app/main/default/objects/Contrato__c/fields/Proprietario_Externo__c.field-meta.xml
<CustomField>
    <fullName>Proprietario_Externo__c</fullName>
    <label>Proprietario Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>