force-app/main/default/objects/Contrato__c/fields/QtdeParcelas__c.field-meta.xml
<CustomField>
    <fullName>QtdeParcelas__c</fullName>
    <label>Qtde de parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>