force-app/main/default/objects/Contrato__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Responsável pela confecção do contrato.</inlineHelpText>
    <label>Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>