force-app/main/default/objects/Contrato__c/fields/SaldoFinal__c.field-meta.xml
<CustomField>
    <fullName>SaldoFinal__c</fullName>
    <label>Saldo final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>