force-app/main/default/objects/Contrato__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando elaboração</fullName>
            </value>
            <value>
                <fullName>Elaboração de contrato</fullName>
            </value>
            <value>
                <fullName>Contrato Enviado</fullName>
            </value>
            <value>
                <fullName>Declinado</fullName>
            </value>
            <value>
                <fullName>Contrato Assinado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>