force-app/main/default/objects/Contrato__c/fields/StatusContrato__c.field-meta.xml
<CustomField>
    <fullName>StatusContrato__c</fullName>
    <label>Status do contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Liquidado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>