force-app/main/default/objects/Contrato__c/fields/TAC__c.field-meta.xml
<CustomField>
    <fullName>TAC__c</fullName>
    <label>TAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>