force-app/main/default/objects/Contrato__c/fields/Taxamantida__c.field-meta.xml
<CustomField>
    <fullName>Taxamantida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxa mantida</label>
    <type>Checkbox</type>
</CustomField>