force-app/main/default/objects/Contrato__c/fields/TipoContrato__c.field-meta.xml
<CustomField>
    <fullName>TipoContrato__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Novo aporte</fullName>
            </value>
            <value>
                <fullName>Empréstimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>