force-app/main/default/objects/Contrato__c/fields/TransferenciaRealizada__c.field-meta.xml
<CustomField>
    <fullName>TransferenciaRealizada__c</fullName>
    <label>Transferência realizada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>