force-app/main/default/objects/Contrato__c/fields/ValorContrato__c.field-meta.xml
<CustomField>
    <fullName>ValorContrato__c</fullName>
    <label>Valor do contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>