force-app/main/default/objects/Contrato__c/fields/ValorParcela__c.field-meta.xml
<CustomField>
    <fullName>ValorParcela__c</fullName>
    <label>Valor da parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>