force-app/main/default/objects/Contrato__c/fields/ValorResgate__c.field-meta.xml
<CustomField>
    <fullName>ValorResgate__c</fullName>
    <label>Valor do resgate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>