force-app/main/default/objects/Contrato__c/recordTypes/Investimentos.recordType-meta.xml
<RecordType>
    <fullName>Investimentos</fullName>
    <active>true</active>
    <label>Investimentos</label>
</RecordType>