force-app/main/default/objects/Contrato__c/recordTypes/OperacoesEstruturadas.recordType-meta.xml
<RecordType>
    <fullName>OperacoesEstruturadas</fullName>
    <active>true</active>
    <label>Operações estruturadas</label>
</RecordType>