force-app/main/default/objects/Contrato__c/validationRules/BloqueiaPercentualUtilizadoGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaPercentualUtilizadoGarantia</fullName>
    <active>true</active>
    <description>Regra que impede que um contrato tenha sua porcentagem de utilização como garantia acima de 100%.</description>
    <errorConditionFormula>PercentualUtilizado__c  &gt; 1</errorConditionFormula>
    <errorMessage>Verifique a porcentagem de utilização deste contrato como garantia. O valor não deve ultrapassar 100%.</errorMessage>
</ValidationRule>