force-app/main/default/objects/Contrato__c/validationRules/QuantidadeParcelas.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantidadeParcelas</fullName>
    <active>true</active>
    <description>No layout de oportunidade deverá ser retirado o campo denominado “Qtde de parcelas” na seção de Informações e o O campo que deverá ser enviado para a emissão de contrato é o campo “Prazo da Operação” da oportunidade.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;OperacoesEstruturadas&apos;,
    ISPICKVAL(Periodo__c, &apos;Mensal&apos;),
    ISBLANK( QtdeParcelas__c )
)</errorConditionFormula>
    <errorMessage>Informe a quantidade de parcelas.</errorMessage>
</ValidationRule>