force-app/main/default/objects/Contrato__c/validationRules/ValidaFaseOportunidadeRelacionada.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaFaseOportunidadeRelacionada</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
ISPICKVAL(Oportunidade__r.Type, &apos;Securitizadora&apos;),
 CriadoPorAutomacao__c != true,
Oportunidade__c  &lt;&gt; NULL,
NOT(ISPICKVAL(Oportunidade__r.StageName, &apos;Contrato Assinado&apos;))),true, false
)</errorConditionFormula>
    <errorDisplayField>Oportunidade__c</errorDisplayField>
    <errorMessage>Não é possível associar uma oportunidade com status diferente de Contrato Assinado</errorMessage>
</ValidationRule>