force-app/main/default/objects/Contrato__c/validationRules/VerificaPermissaoAlteracaoOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificaPermissaoAlteracaoOwner</fullName>
    <active>true</active>
    <description>A regra consiste em:
Caso o papel seja diferente de Executivo formalização, e o campo a ser alterado é igual proprietário do contrato não permitir alterar</description>
    <errorConditionFormula>AND( 
    NOT(ISNEW()), 
    NOT(ISBLANK(PRIORVALUE( OwnerId  ))),
    ISCHANGED( OwnerId ),
    $UserRole.Name  &lt;&gt; &quot;Executivo Formalização&quot;,
    UnidadeNegocio__c = &apos;Investimentos&apos;				
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Você não tem permissão de alterar o proprietário de um contrato. Procure o superior</errorMessage>
</ValidationRule>