force-app/main/default/objects/Contrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BoletimSubscricao__c</columns>
    <columns>NumeroProposta__c</columns>
    <columns>Oportunidade__c</columns>
    <columns>PrazoContrato__c</columns>
    <columns>DataInicioContrato__c</columns>
    <columns>DataFimContrato__c</columns>
    <columns>Status__c</columns>
    <columns>Produto__c</columns>
    <columns>Taxa__c</columns>
    <columns>ValorContrato__c</columns>
    <columns>ValorParcela__c</columns>
    <columns>Responsavel__c</columns>
    <columns>UnidadeNegocio__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Integração</value>
    </filters>
    <label>Tudo</label>
</ListView>