force-app/main/default/objects/Contrato__c/listViews/ContratosInvestimentosFinalizados.listView-meta.xml
<ListView>
    <fullName>ContratosInvestimentosFinalizados</fullName>
    <columns>NAME</columns>
    <columns>BoletimSubscricao__c</columns>
    <columns>Oportunidade__c</columns>
    <columns>Conta__c</columns>
    <columns>Produto__c</columns>
    <columns>Taxa__c</columns>
    <columns>PrazoContrato__c</columns>
    <columns>DataInicioContrato__c</columns>
    <columns>DataFimContrato__c</columns>
    <columns>Status__c</columns>
    <columns>ValorContrato__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contrato__c.Investimentos</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Declinado,Contrato Assinado</value>
    </filters>
    <label>Contratos Investimentos - Finalizados</label>
    <sharedTo>
        <group>Formalizacao</group>
    </sharedTo>
</ListView>